--- a/lib/demo.html
+++ b/lib/demo.html
@@ -1,10 +1,8 @@
 <meta charset="utf-8">
 <title>join-ui demo</title>
-<script src="./join-ui.umd.js"></script>
+<script src="https://unpkg.com/vue"></script>
+<script src="./join-ui.js"></script>
 
-<link rel="stylesheet" href="./join-ui.css">
 
+<join-ui></join-ui>
 
-<script>
-console.log(join-ui)
-</script>
