--- a/lib/demo.html
+++ b/lib/demo.html
@@ -1,10 +1,10 @@
 <meta charset="utf-8">
-<title>join-ui demo</title>
-<script src="./join-ui.umd.js"></script>
+<title>Main demo</title>
+<script src="./Main.umd.js"></script>
 
-<link rel="stylesheet" href="./join-ui.css">
+<link rel="stylesheet" href="./Main.css">
 
 
 <script>
-console.log(join-ui)
+console.log(Main)
 </script>
